all functionalities working - schemas examples and cleaning to do
