# REST APIs Implementation/controllers/UserController.js
@@ -3,10 +3,11 @@
 const { passport } = require('../components/passport.js');
 const { body, validationResult, matchedData } = require('express-validator');
 // const userSchema = require('../schemas/user.json')
+const utils = require('../utils/writer.js');
 
 
 module.exports.userValidation = () =>
-	[body('username').notEmpty().isEmail(),
+	[body('email').notEmpty().isEmail(),
 	body('password').notEmpty()]
 
 
@@ -14,16 +15,18 @@ module.exports.userLogin = function userLogin(req, res, next) {
 
 	const result = validationResult(req);
 	if (result.isEmpty()) {
-		const data = matchedData(req);
+		// const data = matchedData(req);
+
 
 		passport.authenticate('local', (err, user, info) => {
 			if (err)
 				return next(err);
 			if (!user) {
-				// display wrong login messages
+				// display wrong login messages				
 				return res.status(401).json({ error: info });
 			}
 			// success, perform the login and extablish a login session
+
 			req.login(user, (err) => {
 				if (err)
 					return next(err);
